NetBSD Problem Report #54098

From www@netbsd.org  Thu Apr  4 11:00:16 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 299CD7A1B3
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  4 Apr 2019 11:00:16 +0000 (UTC)
Message-Id: <20190404110015.5FA097A1C1@mollari.NetBSD.org>
Date: Thu,  4 Apr 2019 11:00:15 +0000 (UTC)
From: yamt9999@gmail.com
Reply-To: yamt9999@gmail.com
To: gnats-bugs@NetBSD.org
Subject: pf and npf interfere each others
X-Send-Pr-Version: www-1.0

>Number:         54098
>Category:       kern
>Synopsis:       pf and npf interfere each others
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Apr 04 11:05:00 +0000 2019
>Closed-Date:    Sat Aug 10 21:16:14 +0000 2019
>Last-Modified:  Sat Aug 10 21:16:14 +0000 2019
>Originator:     YAMAMOTO Takashi
>Release:        netbsd 8.0/amd64
>Organization:
>Environment:
NetBSD ushi 8.0 NetBSD 8.0 (GENERIC) #0: Tue Jul 17 14:59:51 UTC 2018  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/amd64/compile/GENERIC amd64
>Description:
- pf and npf don't work simultaneously because they use the same field. (if_pf_kif)

- on the other hand, there seems to be no mechanism to prevent them from being enabled simultaneously.

- it can be even more dangerous with module autoloading.

>How-To-Repeat:
"npfctl show" on a box with pf configured.

>Fix:
stop using the same field, or make them mutually exclusive.

>Release-Note:

>Audit-Trail:
From: "Mindaugas Rasiukevicius" <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54098 CVS commit: src/sys
Date: Sat, 10 Aug 2019 21:13:55 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Sat Aug 10 21:13:54 UTC 2019

 Modified Files:
 	src/sys/net: if.h
 	src/sys/net/npf: npf_os.c
 	src/sys/sys: param.h

 Log Message:
 Add the ifnet_t::if_npf_private field.  Bump the kernel version.
 Fixes PR/54098.


 To generate a diff of this commit:
 cvs rdiff -u -r1.274 -r1.275 src/sys/net/if.h
 cvs rdiff -u -r1.12 -r1.13 src/sys/net/npf/npf_os.c
 cvs rdiff -u -r1.605 -r1.606 src/sys/sys/param.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 10 Aug 2019 21:16:14 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.