Add the ifnet_t::if_npf_private field.  Bump the kernel version. Fixes PR/54098.